<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ma_title_text_height"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_18sp"
        android:paddingBottom="@dimen/margin_padding_8dp"
        android:singleLine="true"
        android:fontFamily="serif"
        android:ellipsize="end"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/main_activity_toolbar_title"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/mainLLContainerStyle">

                <TextView
                    android:id="@+id/id_tv_ques_first"
                    style="@style/questionTVStyle"
                    android:text="@string/text_ques_first"/>

                <RadioGroup
                    style="@style/radioButtonGroup"
                    android:layout_below="@id/id_tv_ques_first">

                    <RadioButton
                        android:id="@+id/id_rb_opt_1_a"
                        style="@style/radioButtonOption"
                        android:text="@string/option_1_a"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_1_b"
                        style="@style/radioButtonOption"
                        android:text="@string/option_1_b"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_1_c"
                        style="@style/radioButtonOption"
                        android:text="@string/option_1_c"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_1_d"
                        style="@style/radioButtonOption"
                        android:text="@string/option_1_d"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                style="@style/mainLLContainerStyle">

                <TextView
                    android:id="@+id/id_tv_ques_second"
                    style="@style/questionTVStyle"
                    android:text="@string/text_ques_second"/>

                <RadioGroup
                    style="@style/radioButtonGroup"
                    android:layout_below="@id/id_tv_ques_second">

                    <RadioButton
                        android:id="@+id/id_rb_opt_2_a"
                        style="@style/radioButtonOption"
                        android:text="@string/option_2_a"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_2_b"
                        style="@style/radioButtonOption"
                        android:text="@string/option_2_b"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_2_c"
                        style="@style/radioButtonOption"
                        android:text="@string/option_2_c"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_2_d"
                        style="@style/radioButtonOption"
                        android:text="@string/option_2_d"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                style="@style/mainLLContainerStyle">

                <TextView
                    android:id="@+id/id_tv_ques_third"
                    style="@style/questionTVStyle"
                    android:text="@string/text_ques_third"/>

                <RadioGroup
                    style="@style/radioButtonGroup"
                    android:layout_below="@id/id_tv_ques_third">

                    <RadioButton
                        android:id="@+id/id_rb_opt_3_a"
                        style="@style/radioButtonOption"
                        android:text="@string/option_3_a"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_3_b"
                        style="@style/radioButtonOption"
                        android:text="@string/option_3_b"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_3_c"
                        style="@style/radioButtonOption"
                        android:text="@string/option_3_c"/>

                    <RadioButton
                        android:id="@+id/id_rb_opt_3_d"
                        style="@style/radioButtonOption"
                        android:text="@string/option_3_d"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                style="@style/mainLLContainerStyle">

                <TextView
                    android:id="@+id/id_tv_ques_fourth"
                    style="@style/questionTVStyle"
                    android:text="@string/text_ques_fourth"/>

                <RadioGroup
                    style="@style/radioButtonGroup"
                    android:layout_below="@id/id_tv_ques_fourth">

                    <CheckBox
                        android:id="@+id/id_cb_opt_4_a"
                        style="@style/radioButtonOption"
                        android:text="@string/option_4_a"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_4_b"
                        style="@style/radioButtonOption"
                        android:text="@string/option_4_b"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_4_c"
                        style="@style/radioButtonOption"
                        android:text="@string/option_4_c"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_4_d"
                        style="@style/radioButtonOption"
                        android:text="@string/option_4_d"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                style="@style/mainLLContainerStyle">

                <TextView
                    android:id="@+id/id_tv_ques_fifth"
                    style="@style/questionTVStyle"
                    android:text="@string/text_ques_fifth"/>

                <RadioGroup
                    style="@style/radioButtonGroup"
                    android:layout_below="@id/id_tv_ques_fifth">

                    <CheckBox
                        android:id="@+id/id_cb_opt_5_a"
                        style="@style/radioButtonOption"
                        android:text="@string/option_5_a"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_5_b"
                        style="@style/radioButtonOption"
                        android:text="@string/option_5_b"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_5_c"
                        style="@style/radioButtonOption"
                        android:text="@string/option_5_c"/>

                    <CheckBox
                        android:id="@+id/id_cb_opt_5_d"
                        style="@style/radioButtonOption"
                        android:text="@string/option_5_d"/>
                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_padding_24dp"
                android:text="@string/text_end_of_question"/>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_1px"
        android:background="@color/colorBlack" />

    <Button
        android:id="@+id/id_btn_quiz_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_20sp"
        android:paddingTop="@dimen/margin_padding_12dp"
        android:paddingBottom="@dimen/margin_padding_12dp"
        android:background="@drawable/ripple_effect"
        android:onClick="quizResultButton"
        android:textStyle="bold"
        android:text="@string/btn_txt_quiz_result"/>
</LinearLayout>